<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Synth</string>
    <string name="menu_settings">Settings</string>
    <string name="btnAText">A</string>
    <string name="btnBText">B</string>
    <string name="btnCText">C</string>
    <string name="btnDText">D</string>
    <string name="btnEText">E</string>
    <string name="btnFText">F</string>
    <string name="btnGText">G</string>
    <string name="radioBtnSineText">Sine</string>
    <string name="radioBtnSawText">Saw-Tooth</string>
    <string name="radioBtnSquareText">Square</string>
    <string name="radioBtnHarmonicSquareText">Harmonic Square</string>
    <string name="toggleBtnLowPassFilterText">Low-Pass Filter</string>
    <string name="toggleBtnDepthLFOText">Depth LFO</string>
    <string name="toggleBtnRateLFOText">Rate LFO</string>
    <string name="radioBtnTriangleText">Triangle</string>
    <string name="radioBtnConcTriangleText">Concave Triangle</string>
    <string name="radioBtnConvTriangleText">Convex Triangle</string>

</resources>