<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".SynthActivity" >

    <Button
        android:id="@+id/btnC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="btnCClick"
        android:text="@string/btnCText" />

    <Button
        android:id="@+id/btnD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/btnD"
        android:layout_toRightOf="@+id/btnC"
        android:onClick="btnDClick"
        android:text="@string/btnDText" />

    <Button
        android:id="@+id/btnE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/btnD"
        android:onClick="btnEClick"
        android:text="@string/btnEText" />

    <Button
        android:id="@+id/btnF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/btnE"
        android:onClick="btnFClick"
        android:text="@string/btnFText" />

    <Button
        android:id="@+id/btnG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/btnF"
        android:onClick="btnGClick"
        android:text="@string/btnGText" />

    <Button
        android:id="@+id/btnB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/btnA"
        android:onClick="btnBClick"
        android:text="@string/btnBText" />

    <Button
        android:id="@+id/btnA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/btnG"
        android:onClick="btnAClick"
        android:text="@string/btnAText" />

    <RadioGroup
        android:id="@+id/radioGroupWaveType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnC"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp" >

        <RadioButton
            android:id="@+id/radiobtnSine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radioBtnSineText" />

        <RadioButton
            android:id="@+id/radiobtnSquare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/radioBtnSquareText" />

        <RadioButton
            android:id="@+id/radiobtnHarmonicSquare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioBtnHarmonicSquareText" />

        <RadioButton
            android:id="@+id/radiobtnSaw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioBtnSawText" />
    </RadioGroup>

</RelativeLayout>